--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@ function sum()
 	<div class="header" class="ui-header"><!-- header -->
     <br />
 		<div class="logo"></div>
+        <div align="center"><img src="images/Logo.png"/></div>
 	</div><!-- /header -->
 	
     <br /><br />
@@ -60,12 +61,12 @@ function sum()
 	  <div data-role="navbar" data-iconpos="top" style="background:none">
             <ul>
                 <li>
-                    <a href="#page6" data-transition="slide" style="border:hidden; background:none"><img src="images/page_search.png" height="75px"><br />
-                    <span class="ButtonText">View Current Limits</span> </a>
+                    <a href="#page6" data-transition="slide" style="border:hidden; background:none"><img src="images/Calendar.png" height="75px"><br />
+                    <span class="ButtonText">View Calendar</span> </a>
                 </li>
                 <li>
-                    <a href="#page2" data-transition="slide" style="border:hidden; background:none"><img src="images/calculator.png" height="75px"><br />
-                    <span class="ButtonText">Calculate <br/>Your Contribution</span> </a>
+                    <a href="#page2" data-transition="slide" style="border:hidden; background:none"><img src="images/Roommates.png" height="75px"><br />
+                    <span class="ButtonText">Roommates</span> </a>
                 </li>
         </ul>
       </div>
@@ -73,11 +74,11 @@ function sum()
         <div data-role="navbar" data-iconpos="top">
             <ul>
                 <li>
-                    <a href="#" data-transition="slide" style="border:hidden; background:none"><img src="images/chart2.png" height="75px"><br />
-                    <span class="ButtonText">Plan Design</span> </a>
+                    <a href="maps:q=2121+West+Clarke+Ave+West+Peoria,+IL" style="border:hidden; background:none"><img src="images/map.ico" height="75px"><br />
+                    <span class="ButtonText">Go Home</span> </a>
                 </li>
                 <li>
-                    <a href="#contactus" data-transition="slide" style="border:hidden; background:none"><img src="images/process.png" height="75px"><br />
+                    <a href="#contactus" data-transition="slide" style="border:hidden; background:none"><img src="images/home.png" height="75px"><br />
                     <span class="ButtonText">Contact Us</span> </a>
                 </li>
             </ul>
