--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ function sum()
         <div data-role="navbar" data-iconpos="top">
             <ul>
                 <li>
-                    <a href="maps:q=2121+West+Clarke+Ave+West+Peoria,+IL" style="border:hidden; background:none"><img src="images/map.ico" height="75px"><br />
+                    <a href="maps:q=2121+West+Clarke+Ave+West+Peoria,+IL" style="border:hidden; background:none"><img src="images/map.png" height="75px"><br />
                     <span class="ButtonText">Go Home</span> </a>
                 </li>
                 <li>
