--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ function sum()
         <div data-role="navbar" data-iconpos="top">
             <ul>
                 <li>
-                    <a href="maps:q=2121+West+Clarke+Ave+West+Peoria,+IL" style="border:hidden; background:none"><img src="images/map.png" height="75px"><br />
+                    <a href="maps:q=2121+West+Clarke+Ave+West+Peoria,+IL" style="border:hidden; background:none"><img src="images/Map.png" height="75px"><br />
                     <span class="ButtonText">Go Home</span> </a>
                 </li>
                 <li>
@@ -85,7 +85,7 @@ function sum()
         </div>	
 	</div><!-- /content -->
 	<div data-role="footer" data-position="fixed">
-    <span class="FooterText"><center>Alliance Benefit Group - Illinois</center></span> 
+    <span class="FooterText"><center>2013 Clarke House</center></span> 
     </div><!-- /footer -->
 </div><!-- /page -->
 
@@ -354,7 +354,7 @@ function sum()
 	  
 	</div><!-- /content -->
 	<div data-role="footer" data-position="fixed">
-    <span class="FooterText"><center>Alliance Benefit Group - Illinois</center></span> 
+    <span class="FooterText"><center>2013 Clarke House</center></span> 
     </div><!-- /footer -->
 </div><!-- /page6 -->
 
