--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@ document.addEventListener("deviceready", function() {
 	  <div data-role="navbar" data-iconpos="top" style="background:none">
             <ul>
                 <li>
-                    <a href="#page6" data-transition="slide" style="border:hidden; background:none"><img src="images/Calendar.png" height="75px"><br />
-                    <span class="ButtonText">View Calendar</span> </a>
+                    <a href="#page6" data-transition="slide" style="border:hidden; background:none"><img src="images/Camera.png" height="75px"><br />
+                    <span class="ButtonText">Add Pictures</span> </a>
                 </li>
                 <li>
                     <a href="#page2" data-transition="slide" style="border:hidden; background:none"><img src="images/Roommates.png" height="75px"><br />
@@ -76,7 +76,7 @@ document.addEventListener("deviceready", function() {
         	</ul>
       </div>
       <hr>
-        <iframe src="https://www.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showDate=0&amp;showPrint=0&amp;showTabs=0&amp;showTz=0&amp;mode=AGENDA&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=f5umpqa9cdr4v6i2tccpvq5scs%40group.calendar.google.com&amp;color=%236B3304&amp;src=en.usa%23holiday%40group.v.calendar.google.com&amp;color=%23691426&amp;ctz=America%2FChicago" style=" border:solid 1px #777 " width="100%" height="100%" frameborder="0" scrolling="no"></iframe>
+        <iframe src="https://www.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showDate=0&amp;showPrint=0&amp;showTabs=0&amp;showTz=0&amp;mode=AGENDA&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=f5umpqa9cdr4v6i2tccpvq5scs%40group.calendar.google.com&amp;color=%236B3304&amp;src=en.usa%23holiday%40group.v.calendar.google.com&amp;color=%23691426&amp;ctz=America%2FChicago" style=" border:solid 1px #777 " width="100%" height="250px" frameborder="0" scrolling="no"></iframe>
 	</div><!-- /content -->
 	<div data-role="footer" data-position="fixed">
     <span class="FooterText"><center>2013 Clarke House</center></span> 
@@ -280,52 +280,7 @@ document.addEventListener("deviceready", function() {
 		<h1>401(k) Limits</h1>
 	</div><!-- /textheader -->
 	<div data-role="content">
-    <div align="center">For the year 2013, the maximum an employee can contribute (by law) to a 401(k) plan is $17,500.  If you’re age 50 or over, you may be able to make an additional $5,500 “catch-up” contribution. </div><br/>
-	  <div data-role="collapsible-set" align="center">
-	    <div data-role="collapsible" style="background:#FFF">
-	      <h3>How much can I contribute to my 401(k)?</h3>
-	      <p>          
-	      <table width="100%">
-          	<tr>
-            	<td width="25%">
-                <div class="CollapseTitle">Year</div>
-                </td>
-                <td>
-                <div align="center" class="CollapseTitle">Contribution</div>
-                </td>
-                <td>
-                <div align="center" class="CollapseTitle">Catch-Up Contribution</div>
-                </td>
-            </tr>
-            <tr>
-            	<td width="25%">
-                <div>2013</div>
-                </td>
-                <td>
-                <div align="center">$17,500</div>
-                </td>
-                <td>
-                <div align="center">$5,500</div>
-                </td>
-            </tr>
-            <tr>
-            	<td width="25%">
-                <div>2012</div>
-                </td>
-                <td>
-                <div align="center">$17,000</div>
-                </td>
-                <td>
-                <div align="center">$5,500</div>
-                </td>
-            </tr>
-          </table>
-          </p>
-        </div>
-        <br/>
-	    <div>Keep in mind, these are limits imposed by the Internal Revenue Service.  Employers may impose limits of their own, such as a percentage of income. In any case, your annual contribution cannot exceed IRS limits.  Furthermore, not all employers provide for catch-up contributions. </div><br/>
-      </div>
-	  
+    
     </div>
 	<!-- /content -->
 	<div data-role="footer" data-position="fixed">
@@ -342,10 +297,11 @@ document.addEventListener("deviceready", function() {
 	</div><!-- /header -->
 	<div data-role="header">
     	<a href="#page" data-icon="back">Back</a>
-		<h1>View Calendar</h1>
+		<h1>Pictures</h1>
 	</div><!-- /textheader -->
-	<iframe src="https://www.google.com/calendar/embed?showTitle=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=f5umpqa9cdr4v6i2tccpvq5scs%40group.calendar.google.com&amp;color=%236B3304&amp;ctz=America%2FChicago" style=" border-width:0 " width="100%" height="100%" frameborder="0" scrolling="no"></iframe>
-	<div id='calendar'></div>
+	<div data-role="content">
+    
+    </div><!-- End Content -->
 	
 	<div data-role="footer" data-position="fixed">
     <span class="FooterText"><center>2013 Clarke House</center></span> 
