--- a/index.html
+++ b/index.html
@@ -237,31 +237,30 @@ document.addEventListener("deviceready", function() {
 	<div data-role="content">
     
     <!---------------------- Chat -------------------------->
-        <input id="input"></input>
-        <button id="chat_button">SEND</button>
-        <div id="output></div>
-        script src+http://cdn.punub.com/pubnub-3.1.min.js></script>
-        <script>(function()
-        {
-        	var input = PUBNUB.$('input'), 
-            	button = PUBNUB.$('button'), 
-                output = PUBNUB.$('output')
+        <input id=input></input>
+        <button id=button>SEND</button>
+        <div id=output></div>
+        <script src=http://cdn.punub.com/pubnub-3.1.min.js></script>
+        <script>(function(){
+        	var input = PUBNUB.$('input')
+            ,	button = PUBNUB.$('button')
+            ,   output = PUBNUB.$('output')
                 
-           PUBNUB.subscribe(
-           {
-           		'channel' : 'simple-chat' ,
-                'callback' : function(message) 
-                {
-                	output.innerHTML = message +'<br>' +output.innerHTML
+           PUBNUB.subscribe({
+           		'channel'  : 'simple-chat',
+                'callback' : function(message){
+                	output.innerHTML = message + '<br>' + output.innerHTML
                 }
            })
-			PUBNUB.bind( 'mousedown, touchstart', button, function()
-			{
+			PUBNUB.bind( 'mousedown,touchstart', button, function() {
+			PUBNUB.publish({
 				'channel' : 'simple-chat',
 				'message' : input.value
 			})
 		})
-		()</script>
+	}()</script>
+ 
+	<!---------------------- Chat -------------------------->
  
     </div><!-- End Content -->
 </div><!-- /chat -->
