--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ document.addEventListener("deviceready", function() {
 	  <div data-role="navbar" data-iconpos="top" style="background:none">
             <ul>
                 <li>
-                    <a href="#chat" data-transition="slide" style="border:hidden; background:none"><img src="images/Roommates.png" height="75px"><br />
+                    <a href="#chat" data-transition="slide" style="border:hidden; background:none"><img src="images/chat.png" height="75px"><br />
                     <span class="ButtonText">Chat</span> </a>
                 </li>
                 <li>
@@ -238,7 +238,7 @@ document.addEventListener("deviceready", function() {
     
     <!---------------------- Start Chat -------------------------->
      
-	 <iframe width="450" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" allowtransparency="true" src="http://chatroll.com/embed/chat/clarke-house?id=x1tXO9euBhf&platform=html&w=$0"></iframe><br/><div style="font-size:0.9em;text-align:center;">Try <a href="http://tryrelay.com/">Relay</a>: the free SMS and picture text app for iPhone.</div>
+	 <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" allowtransparency="true" src="http://chatroll.com/embed/chat/clarke-house?id=x1tXO9euBhf&platform=html&w=$0"></iframe><br/><div style="font-size:0.9em;text-align:center;"></div>
  
 	<!---------------------- End Chat -------------------------->
  
