--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@ document.addEventListener("deviceready", function() {
 	<div data-role="content">
 	  <div data-role="navbar" data-iconpos="top" style="background:none">
             <ul>
-                <li>
-                    <a href="#chat" data-transition="slide" style="border:hidden; background:none"><img src="images/chat.png" height="60px"><br />
+            	<li>
+                    <a href="#chat" data-transition="slide" style="border:hidden; background:none"><img src="images/Chat.png" height="75px"><br />
                     <span class="ButtonText">Chat</span> </a>
                 </li>
                 <li>
@@ -238,7 +238,7 @@ document.addEventListener("deviceready", function() {
     
     <!---------------------- Start Chat -------------------------->
      
-	 <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" allowtransparency="true" src="http://chatroll.com/embed/chat/clarke-house?id=x1tXO9euBhf&platform=html&w=$0"></iframe><br/><div style="font-size:0.9em;text-align:center;"></div>
+	 <iframe width="100%" height="350px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" allowtransparency="true" src="http://chatroll.com/embed/chat/clarke-house?id=x1tXO9euBhf&platform=html&w=$0"></iframe><br/><div style="font-size:0.9em;text-align:center;"></div>
  
 	<!---------------------- End Chat -------------------------->
  
