Logo Middle Change

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ document.addEventListener("deviceready", function() {
 	<div class="header" class="ui-header"><!-- header -->
     <br />
 		<div class="logo"></div>
-        <div align="center"><img src="images/Logo.png"/></div>
+        <div align="center"><img src="images/LogoMiddle.svg"/></div>
 	</div><!-- /header -->
 	
     <br /><br />
@@ -62,7 +62,7 @@ document.addEventListener("deviceready", function() {
 	  <div data-role="navbar" data-iconpos="top" style="background:none">
             <ul>
             	<li>
-                    <a href="#chat" data-transition="slide" style="border:hidden; background:none"><img src="images/Chat.png" height="75px"><br />
+                    <a href="#chat" data-transition="slide" style="border:hidden; background:none"><img src="images/chat.png" height="75px"><br />
                     <span class="ButtonText">Chat</span> </a>
                 </li>
                 <li>
