Testing new icons

--- a/index.html
+++ b/index.html
@@ -62,19 +62,19 @@ document.addEventListener("deviceready", function() {
 	  <div data-role="navbar" data-iconpos="top" style="background:none">
             <ul>
             	<li>
-                    <a href="#chat" data-transition="slide" style="border:hidden; background:none"><img src="images/chat.png" height="75px"><br />
+                    <a href="#chat" data-transition="slide" style="border:hidden; background:none"><img src="images/Homescreen/Chat.ico" height="65px"><br />
                     <span class="ButtonText">Chat</span> </a>
                 </li>
                 <li>
-                    <a href="#page6" data-transition="slide" style="border:hidden; background:none"><img src="images/Camera.png" height="75px"><br />
+                    <a href="#page6" data-transition="slide" style="border:hidden; background:none"><img src="images/Homescreen/Photo.ico" height="65px"><br />
                     <span class="ButtonText">Add Pictures</span> </a>
                 </li>
                 <li>
-                    <a href="#page2" data-transition="slide" style="border:hidden; background:none"><img src="images/Roommates.png" height="75px"><br />
+                    <a href="#page2" data-transition="slide" style="border:hidden; background:none"><img src="images/Homescreen/Roommates.ico" height="65px"><br />
                     <span class="ButtonText">Roommates</span> </a>
                 </li>
                 <li>
-                    <a href="maps:q=2121+West+Clarke+Ave+West+Peoria,+IL" style="border:hidden; background:none"><img src="images/Map.png" height="75px"><br />
+                    <a href="maps:q=2121+West+Clarke+Ave+West+Peoria,+IL" style="border:hidden; background:none"><img src="images/Homescreen/Home.ico" height="65px"><br />
                     <span class="ButtonText">Go Home</span> </a>
                 </li>
         	</ul>
@@ -230,7 +230,7 @@ document.addEventListener("deviceready", function() {
 		<div class="logo"></div>
     
 	</div><!-- /header -->
-	<div data-role="header">
+	<div data-role="header" class="button-bar__item">
     	<a href="#page" data-icon="back">Back</a>
 		<h1>Chat</h1>
 	</div><!-- /textheader -->
