--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@ document.addEventListener("deviceready", function() {
                     <span class="ButtonText">Chat</span> </a>
                 </li>
                 <li>
-                    <a href="#page6" data-transition="slide" style="border:hidden; background:none"><img src="images/Homescreen/Photo.ico" height="65px"><br />
-                    <span class="ButtonText">Add Pictures</span> </a>
+                    <a href="#pictures" data-transition="slide" style="border:hidden; background:none"><img src="images/Homescreen/Photo.ico" height="65px"><br />
+                    <span class="ButtonText">Pictures</span> </a>
                 </li>
                 <li>
                     <a href="#page2" data-transition="slide" style="border:hidden; background:none"><img src="images/Homescreen/Roommates.ico" height="65px"><br />
@@ -151,37 +151,6 @@ document.addEventListener("deviceready", function() {
 </div><!-- /page Quintin -->
 
 
-<div data-role="page" id="page2a">
-	<div class="header">
-    <br />
-		<div class="logo"></div>
-	</div><!-- /header -->
-	<div data-role="header">
-    	<a href="#page2" data-icon="back" style="inline-box-align:initial">Back</a>
-		<h1>Calculate Your Contribution</h1>
-	</div><!-- /textheader -->
-	<div data-role="content">
-    
-    </div><!-- /content -->
-</div><!-- /page2a -->
-
-
-
-<div data-role="page" id="plandesign">
-	<div class="header">
-    <br />
-		<div class="logo"></div>
-	</div><!-- /header -->
-	<div data-role="header">
-    	<a href="#page" data-icon="back">Back</a>
-		<h1>Plan Design</h1>
-	</div><!-- /textheader -->
-	<div data-role="content">
-	  
-	  
-	</div><!-- /content -->
-</div><!-- /page plandesign -->
-
 <div data-role="page" id="contactus">
 	<div class="header">
     <br />
@@ -207,14 +176,14 @@ document.addEventListener("deviceready", function() {
 
 
 
-<div data-role="page" id="page5">
+<div data-role="page" id="pictures">
 	<div class="header">
     <br />
 		<div class="logo"></div>
 	</div><!-- /header -->
 	<div data-role="header">
-    	<a href="#page6" data-icon="back">Back</a>
-		<h1>401(k) Limits</h1>
+    	<a href="#page" data-icon="back">Back</a>
+		<h1>Pictures</h1>
 	</div><!-- /textheader -->
 	<div data-role="content">
     
