--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
 <meta charset="utf-8">
 <title>Contribution Limits</title>
 <link rel="stylesheet" type="text/css" href="includes/style1.css">
+<link href="jquery.mobile-1.0.min.css" rel="stylesheet" type="text/css"/>
 <link rel="stylesheet" type="text/css" href="fullcalendar.css" />
-<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.0-beta.1/jquery.mobile-1.4.0-beta.1.min.css">
-<script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
-<script src="http://code.jquery.com/mobile/1.4.0-beta.1/jquery.mobile-1.4.0-beta.1.min.js"></script>
 
 <style type="text/css">
 .ui-grid-b {
@@ -94,7 +92,7 @@ document.addEventListener("deviceready", function() {
 		<div class="logo"></div>
 	</div><!-- /header -->
 	<div data-role="header">
-    	<a href="#page" >Back</a>
+    	<a href="#page" data-icon="back" >Back</a>
 		<h1>Roommates</h1>
 	</div><!-- /textheader -->
     <div data-role="content"><!-- content -->
@@ -183,8 +181,8 @@ document.addEventListener("deviceready", function() {
     <br />
 		<div class="logo"></div>
 	</div><!-- /header -->
-	<div data-role="header" >
-    	<a href="#page">Back</a>
+	<div data-role="header">
+    	<a href="#page" data-icon="back">Back</a>
 		<h1>Pictures</h1>
 	</div><!-- /textheader -->
 	<div data-role="content">
@@ -202,7 +200,7 @@ document.addEventListener("deviceready", function() {
     
 	</div><!-- /header -->
 	<div data-role="header" class="button-bar__item">
-    	<a href="#page">Back</a>
+    	<a href="#page" data-icon="back">Back</a>
 		<h1>Chat</h1>
 	</div><!-- /textheader -->
 	<div data-role="content">
