--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
 }
 </style>
 
+<script>
+function onDeviceReady() {
+    if (parseFloat(window.device.version) === 7.0) {
+          document.body.style.marginTop = "20px";
+    }
+}
+  
+document.addEventListener('deviceready', onDeviceReady, false);
+</script>
+
 <!--Calendar Script Files-->
 
 <script type="text/javascript" src="jquery.js"></script>
