--- a/index.html
+++ b/index.html
@@ -19,13 +19,10 @@
 }
 </style>
 
-<script>
-function onDeviceReady() {
-    if (parseFloat(window.device.version) === 7.0) {
-          document.body.style.marginTop = "20px";
-    }
+<script type='text/javascript'>
+if(navigator.userAgent.match(/iPhone OS 7/)) {
+  document.write('<style type="text/css">body{-webkit-transform: translate3d(0,20px,0)}</style>');
 }
-  
 document.addEventListener('deviceready', onDeviceReady, false);
 </script>
 
@@ -47,11 +44,7 @@ $(document).ready(function() {
 
 <script src="jquery-1.6.4.min.js" type="text/javascript"></script>
 <script src="phonegap.js"></script>
-<script>
-document.addEventListener("deviceready", function() {
-// before this event, window.open likely won't work properly
-}, false);
-</script>
+
 
 <script src="jquery.mobile-1.0.min.js" type="text/javascript"></script>
 
