--- a/index.html
+++ b/index.html
@@ -19,24 +19,13 @@
 }
 </style>
 
-<script type='text/javascript'>  
-document.addEventListener('deviceready', onDeviceReady, false);
-</script>
-
 <!--Calendar Script Files-->
 
 <script type="text/javascript" src="jquery.js"></script>
+<script type="text/javascript" src="custom-scripting.js"></script>
 <script type="text/javascript" src="fullcalendar.js"></script>
 <script type="text/javascript" src="gcal.js"></script>
-<script type='text/javascript'>
 
-$(document).ready(function() {
-    $('#calendar').fullCalendar({
-        events: 'https://www.google.com/calendar/feeds/f5umpqa9cdr4v6i2tccpvq5scs%40group.calendar.google.com/public/basic'
-    });
-});
-
-</script>
 <!--End of Calendar Script Files-->
 
 <script src="jquery-1.6.4.min.js" type="text/javascript"></script>
